--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@ code {
 .collapseTransition {
 	transition: height 400ms cubic-bezier(0.65, 0, 0.35, 1);
 }
+
+.collapseTransitionFast {
+	transition: height 200ms cubic-bezier(0.65, 0, 0.35, 1);
+}
