--- a/examples/src/Components/AppLayout/styles.module.css
+++ b/examples/src/Components/AppLayout/styles.module.css
@@ -176,16 +176,15 @@
 	flex-wrap: wrap;
 }
 
-.range {
+.inputContainer {
 	display: grid;
 	gap: 10px;
-	max-width: 200px;
-	justify-items: center;
-	margin: auto;
 	margin-bottom: 40px;
+	justify-items: center;
+	margin: auto auto 40px auto;
 }
 
-.range label {
+.inputContainer label {
 	font-weight: 700;
 }
 
@@ -194,4 +193,24 @@
 	place-content: center;
 	flex-direction: column;
 	align-items: center;
+}
+
+.select {
+	padding: 0.6em 0.4em;
+	background: none;
+	background-color: rgba(0, 0, 0, 0);
+	border-radius: 5px;
+	background-color: #232f43;
+	border: 1px solid #ffffff1f;
+	color: white;
+	margin-bottom: 20px;
+	font-size: 1rem;
+}
+
+.inputContainer {
+	display: grid;
+	gap: 10px;
+	margin-bottom: 40px;
+	justify-items: center;
+	margin: auto auto 40px auto;
 }
