--- a/examples/src/Components/AppLayout/styles.module.css
+++ b/examples/src/Components/AppLayout/styles.module.css
@@ -6,7 +6,7 @@
 	flex-direction: column;
 	padding: var(--padding);
 	align-items: center;
-	min-height: calc(100vh - calc(var(--padding) * 2));
+	min-height: 100vh;
 }
 
 .header {
@@ -54,7 +54,7 @@
 		transform: scale(1.15);
 	}
 
-	.chevronIcon:hover {
+	.chevronButton:hover {
 		background-color: #6558ee;
 	}
 }
@@ -71,12 +71,12 @@
 		rgba(99, 88, 238, 1) 94.3%
 	);
 	border: 2px solid #bbcce84f;
-	padding: 1em;
+	padding: 0.8em;
 	display: flex;
 	place-content: center;
 	gap: 10px;
 	border-radius: 1em;
-	font-size: 1.25rem;
+	font-size: 1.125rem;
 	font-weight: 700;
 	color: white;
 	width: max-content;
@@ -85,18 +85,19 @@
 	background-size: 100%;
 	cursor: pointer;
 	position: fixed;
-	bottom: 50px;
+	bottom: 20px;
 }
 
 .collapseTransition {
-	transition: height 300ms cubic-bezier(0.76, 0, 0.24, 1);
+	transition: height 400ms cubic-bezier(0.76, 0, 0.24, 1);
 }
 
 .fastCollapseTransition {
 	transition: height 200ms ease;
 }
 
-.chevronIcon {
+.chevronButton {
+	padding: 5px;
 	background-color: rgba(0, 0, 0, 0);
 	border: none;
 	display: flex;
@@ -112,7 +113,7 @@
 	background-color: #6558ee;
 }
 
-.chevronIcon svg {
+.chevronButton svg {
 	transform: rotate(0deg);
 	stroke: white;
 	transition: all 300ms ease-out;
@@ -124,7 +125,7 @@
 
 .main {
 	width: 100%;
-	max-width: 800px;
+	max-width: 650px;
 	margin: 50px auto;
 }
 
@@ -132,7 +133,8 @@
 	border: 1px solid #ffffff1f;
 	border-radius: 10px;
 	background-color: #232f43;
-	padding: 20px;
+	padding: 15px;
+	margin-bottom: 20px;
 }
 
 @media (min-width: 920px) {
@@ -152,9 +154,20 @@
 	.header svg {
 		margin-bottom: 10px;
 	}
+
+	.codeButton {
+		bottom: 50px;
+		font-size: 1.25rem;
+		padding: 1em;
+	}
+
+	.collapseContainer {
+		padding: 20px;
+	}
 }
 
 .collapseHeader {
+	gap: 10px;
 	font-size: 1.125rem;
 	font-weight: 700;
 	display: flex;
