--- a/examples/src/Components/CodeWindow/styles.module.css
+++ b/examples/src/Components/CodeWindow/styles.module.css
@@ -11,7 +11,7 @@
 .wrapper {
 	display: flex;
 	place-content: center;
-	padding: 20px;
+	padding: 0;
 	left: 0;
 	right: 0;
 	position: fixed;
@@ -19,8 +19,13 @@
 	backdrop-filter: blur(10px);
 	animation: wrapper-anim 300ms ease-out;
 	background-color: #0000004d;
-	min-height: calc(100vh - calc(20px * 2));
+	height: 100%;
+	max-height: 100vh;
 	align-items: center;
+}
+
+@media (min-width: 680px) {
+	padding: 20px;
 }
 
 .linksNav {
@@ -41,6 +46,8 @@
 	font-size: 0.925rem;
 	padding: 10px;
 	opacity: 0.75;
+	text-align: center;
+	width: max-content;
 }
 
 @media (hover: hover) {
@@ -55,9 +62,13 @@
 }
 
 .container {
-	margin-top: -100px;
 	max-width: 1000px;
 	width: 100%;
+	padding: 20px;
+}
+
+@media (min-width: 920px) {
+	margin-top: -100px;
 }
 
 .title {
