--- a/examples/src/styles/prism.css
+++ b/examples/src/styles/prism.css
@@ -4,87 +4,92 @@
  * @author Joe Gibson (@gibsjose)
  */
 
-code[class*="language-"],
-pre[class*="language-"] {
-    color: #c5c8c6;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-    font-family: Fira Code, Monaco, Consolas, "Courier New", Courier, monospace;
-    direction: ltr;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    line-height: 1.5;
-    font-size: 0.875rem;
-    max-height: 700px;
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+code[class*='language-'],
+pre[class*='language-'] {
+	color: #c5c8c6;
+	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+	font-family: Fira Code, Monaco, Consolas, 'Courier New', Courier, monospace;
+	direction: ltr;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	line-height: 1.5;
+	font-size: 0.875rem;
+	max-height: 700px;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
 /* Code blocks */
-pre[class*="language-"] {
-    padding: 1em;
-    margin: 0.5em 0;
-    overflow: auto;
-    border-radius: 0.3em;
+pre[class*='language-'] {
+	padding: 1em;
+	margin: 0.5em 0;
+	overflow: auto;
+	border-radius: 0.3em;
+	max-height: 70vh !important;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-    background-color: #1e293b;
-    border-radius: 20px;
-    border: 2px solid #bbcce84f;
+@media (min-width: 920px) {
+	margin: 20px;
+}
+
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+	background-color: #1e293b;
+	border-radius: 20px;
+	border: 2px solid #bbcce84f;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
-    padding: 0.1em;
-    border-radius: 0.3em;
+:not(pre) > code[class*='language-'] {
+	padding: 0.1em;
+	border-radius: 0.3em;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-    color: #7c7c7c;
+	color: #7c7c7c;
 }
 
 .token.punctuation {
-    color: #c5c8c6;
+	color: #c5c8c6;
 }
 
 .namespace {
-    opacity: 0.7;
+	opacity: 0.7;
 }
 
 .token.property,
 .token.keyword,
 .token.tag {
-    color: #96cbfe;
+	color: #96cbfe;
 }
 
 .token.class-name {
-    color: #ffffb6;
-    text-decoration: underline;
+	color: #ffffb6;
+	text-decoration: underline;
 }
 
 .token.boolean,
 .token.constant {
-    color: #99cc99;
+	color: #99cc99;
 }
 
 .token.symbol,
 .token.deleted {
-    color: #f92672;
+	color: #f92672;
 }
 
 .token.number {
-    color: #ff73fd;
+	color: #ff73fd;
 }
 
 .token.selector,
@@ -93,53 +98,53 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-    color: #a8ff60;
+	color: #a8ff60;
 }
 
 .token.variable {
-    color: #c6c5fe;
+	color: #c6c5fe;
 }
 
 .token.operator {
-    color: #ededed;
+	color: #ededed;
 }
 
 .token.entity {
-    color: #ffffb6;
-    cursor: help;
+	color: #ffffb6;
+	cursor: help;
 }
 
 .token.url {
-    color: #96cbfe;
+	color: #96cbfe;
 }
 
 .language-css .token.string,
 .style .token.string {
-    color: #87c38a;
+	color: #87c38a;
 }
 
 .token.atrule,
 .token.attr-value {
-    color: #f9ee98;
+	color: #f9ee98;
 }
 
 .token.function {
-    color: #dad085;
+	color: #dad085;
 }
 
 .token.regex {
-    color: #e9c062;
+	color: #e9c062;
 }
 
 .token.important {
-    color: #fd971f;
+	color: #fd971f;
 }
 
 .token.important,
 .token.bold {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .token.italic {
-    font-style: italic;
+	font-style: italic;
 }
