--- a/examples/src/Components/CodeWindow/styles.module.css
+++ b/examples/src/Components/CodeWindow/styles.module.css
@@ -18,7 +18,7 @@
 	top: 0;
 	backdrop-filter: blur(10px);
 	animation: wrapper-anim 300ms ease-out;
-	background-color: #0000004d;
+	background-color: #0000008a;
 	height: 100%;
 	max-height: 100vh;
 	align-items: center;
@@ -38,6 +38,7 @@
 
 .linksNav button,
 .linksNav a {
+	font-weight: 600;
 	background: none;
 	border: none;
 	text-decoration: none;
